# CS-Data-Science-Build-Week-1

build_week/: Algorithm Explanation  pyproject.toml
build_week/build_week/: k_nearest_neighbors.py  test_k_nearest_neighbors.py
