[tool.poetry]
name = "build_week"
version = "0.1.0"
description = ""
authors = ["zacherymoy <49412517+zacherymoy@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.1"
pandas = "^1.1.1"
scikit-learn = "^0.23.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
